<resources>
    <string name="app_name">Covid 19 Stats</string>
    <string name="summary_new">Last 24 hours</string>
    <string name="summary_total">Total</string>
    <string name="global_summary_title">Global summary</string>
    <string name="cases_title">Cases</string>
    <string name="deaths_title">Deaths</string>
    <string name="recovered_title">Recovered</string>
    <string name="updated_at">updated at %1$s</string>
    <string name="loading">Loading...</string>
    <string name="refresh">Refresh</string>

    <string-array name="top_5_sort_by">
        <item>@string/cases_title</item>
        <item>@string/deaths_title</item>
        <item>@string/recovered_title</item>
    </string-array>

    <string-array name="top_5_period">
        <item>@string/summary_total</item>
        <item>@string/summary_new</item>
    </string-array>

    <string name="no_data_state">There is no data available</string>
    <string name="loading_state">Loading...</string>
    <string name="error_state">Error loading data. Check your internet connection</string>


    <string name="title_summary">Summary</string>
    <string name="title_countries">Countries</string>
    <string name="title_news">News</string>
    <string name="subtitle_summary">%1$s cases and %2$s deaths in last 24 hours</string>
    <string name="subtitle_summary_cases">%1$s cases and %2$s in last 24 hours</string>
    <string name="subtitle_summary_deaths">%1$s deaths and %2$s in last 24 hours</string>
    <string name="subtitle_summary_recovered">%1$s recovered and %2$s in last 24 hours</string>
    <string name="load_fail">Failed to load</string>
    <string name="search">Search</string>
    <string name="clear">Clear</string>
    <string name="sort_by_cases">Cases</string>
    <string name="sort_by_deaths">Deaths</string>
    <string name="sort_by_recovered">Recovered</string>
    <string name="sort_by_last_24">Last 24 hours</string>
    <string name="sort_by_total">Total</string>
    <string name="sort_by_ascending">Ascending</string>
    <string name="sort_by_descending">Descending</string>
    <string name="content_description_sort">Sorting icon</string>
    <string name="sort_by_title">Sort by...</string>
</resources>