<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_summary">

    <fragment
        android:id="@+id/navigation_summary"
        android:name="com.tibagni.covid.summary.SummaryFragment"
        android:label="@string/global_summary_title"
        tools:layout="@layout/summary_fragment" />

    <fragment
        android:id="@+id/navigation_countries"
        android:name="com.tibagni.covid.countries.CountriesFragment"
        android:label="@string/title_countries"
        tools:layout="@layout/countries_fragment" />

    <fragment
        android:id="@+id/navigation_news"
        android:name="com.tibagni.covid.news.NewsFragment"
        android:label="@string/title_news"
        tools:layout="@layout/news_fragment" />

</navigation>