<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".countries.SortCountriesDialogFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/sort_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/content_description_sort"
            android:src="@drawable/ic_sort_black_24dp"/>
        <TextView
            android:id="@+id/by_cases_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:text="@string/sort_by_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

        <Button
            android:id="@+id/clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:text="@string/clear"/>

    </LinearLayout>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/sort_by_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sort_icon"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/by_cases"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:chipIcon="@drawable/ic_coronavirus_black_24dp"
            app:chipIconVisible="true"
            android:text="@string/sort_by_cases" />

        <com.google.android.material.chip.Chip
            android:id="@+id/by_deaths"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:chipIcon="@drawable/ic_rip_black_24dp"
            app:chipIconVisible="true"
            android:text="@string/sort_by_deaths" />

        <com.google.android.material.chip.Chip
            android:id="@+id/by_recovered"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:chipIcon="@drawable/ic_healing_black_24dp"
            app:chipIconVisible="true"
            android:text="@string/sort_by_recovered" />
    </com.google.android.material.chip.ChipGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_margin="8dp"
        android:background="?attr/dividerColor"/>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/total_new_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sort_icon"
        app:checkedChip="@+id/total"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/total"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:chipIcon="@drawable/ic_infinite_black_24dp"
            app:chipIconVisible="true"
            android:text="@string/sort_by_total" />

        <com.google.android.material.chip.Chip
            android:id="@+id/last_24"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:chipIcon="@drawable/ic_clock_black_24dp"
            app:chipIconVisible="true"
            android:text="@string/sort_by_last_24" />
    </com.google.android.material.chip.ChipGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_margin="8dp"
        android:background="?attr/dividerColor"/>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/asc_desc_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sort_icon"
        app:selectionRequired="true"
        app:singleSelection="true"
        app:checkedChip="@+id/asc">

        <com.google.android.material.chip.Chip
            android:id="@+id/asc"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:chipIcon="@drawable/ic_up_black_24dp"
            app:chipIconVisible="true"
            android:text="@string/sort_by_ascending" />

        <com.google.android.material.chip.Chip
            android:id="@+id/desc"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:chipIcon="@drawable/ic_down_black_24dp"
            app:chipIconVisible="true"
            android:text="@string/sort_by_descending" />
    </com.google.android.material.chip.ChipGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="end"
        android:orientation="horizontal">
        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:text="@android:string/cancel"/>

        <Button
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:text="@android:string/ok"/>
    </LinearLayout>


</LinearLayout>