<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/title_area"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    app:layout_constraintBottom_toBottomOf="@+id/flag"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/flag"
                    app:layout_constraintTop_toTopOf="@+id/flag"
                    tools:text="Brazil" />

                <TextView
                    android:id="@+id/subtitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    app:layout_constraintStart_toStartOf="@+id/title"
                    app:layout_constraintTop_toBottomOf="@+id/title"
                    tools:text="Updated at 07/02/2020 9:30 AM" />

                <ImageView
                    android:id="@+id/flag"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@drawable/ic_globe_black_24dp" />

                <ImageView
                    android:id="@+id/pin_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/title"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_bookmark_border_black_24dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/expandable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/title_area"
                app:layout_constraintTop_toBottomOf="@+id/title_area">

                <TextView
                    android:id="@+id/subtitle_cases"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/cases_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/subtitle_deaths"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/deaths_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    app:layout_constraintStart_toStartOf="@+id/subtitle_cases"
                    app:layout_constraintTop_toBottomOf="@+id/total_lbl" />

                <TextView
                    android:id="@+id/subtitle_recovered"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/recovered_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    app:layout_constraintStart_toStartOf="@+id/subtitle_cases"
                    app:layout_constraintTop_toBottomOf="@+id/total_deaths_lbl" />

                <TextView
                    android:id="@+id/total_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@+id/total_lbl"
                    app:layout_constraintEnd_toEndOf="@+id/new_txt"
                    app:layout_constraintTop_toTopOf="@+id/total_lbl"
                    tools:text="12345678987" />

                <TextView
                    android:id="@+id/total_deaths_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@+id/total_deaths_lbl"
                    app:layout_constraintEnd_toEndOf="@+id/new_txt"
                    app:layout_constraintTop_toTopOf="@+id/total_deaths_lbl"
                    tools:text="12345678987" />

                <TextView
                    android:id="@+id/total_recovered_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@+id/total_recovered_lbl"
                    app:layout_constraintEnd_toEndOf="@+id/new_txt"
                    app:layout_constraintTop_toTopOf="@+id/total_recovered_lbl"
                    tools:text="12345678987" />

                <TextView
                    android:id="@+id/total_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/summary_total"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    app:layout_constraintStart_toStartOf="@+id/new_lbl"
                    app:layout_constraintTop_toBottomOf="@+id/new_lbl" />

                <TextView
                    android:id="@+id/total_deaths_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/summary_total"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    app:layout_constraintStart_toStartOf="@+id/new_deaths_lbl"
                    app:layout_constraintTop_toBottomOf="@+id/new_deaths_lbl" />

                <TextView
                    android:id="@+id/total_recovered_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/summary_total"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/new_recovered_lbl"
                    app:layout_constraintTop_toBottomOf="@+id/new_recovered_lbl" />

                <TextView
                    android:id="@+id/new_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintBottom_toBottomOf="@+id/new_lbl"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/new_lbl"
                    tools:text="12345678" />

                <TextView
                    android:id="@+id/new_deaths_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@+id/new_deaths_lbl"
                    app:layout_constraintEnd_toEndOf="@+id/new_txt"
                    app:layout_constraintTop_toTopOf="@+id/new_deaths_lbl"
                    tools:text="12345678" />

                <TextView
                    android:id="@+id/new_recovered_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@+id/new_recovered_lbl"
                    app:layout_constraintEnd_toEndOf="@+id/new_txt"
                    app:layout_constraintTop_toTopOf="@+id/new_recovered_lbl"
                    tools:text="12345678" />

                <TextView
                    android:id="@+id/new_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/summary_new"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/subtitle_cases" />

                <TextView
                    android:id="@+id/new_deaths_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/summary_new"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/subtitle_deaths" />

                <TextView
                    android:id="@+id/new_recovered_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/summary_new"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/subtitle_recovered" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0.5dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="?attr/dividerColor"
                    app:layout_constraintBottom_toBottomOf="@+id/new_txt"
                    app:layout_constraintEnd_toStartOf="@+id/new_txt"
                    app:layout_constraintStart_toEndOf="@+id/new_lbl" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0.5dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="?attr/dividerColor"
                    app:layout_constraintBottom_toBottomOf="@+id/new_deaths_txt"
                    app:layout_constraintEnd_toStartOf="@+id/new_deaths_txt"
                    app:layout_constraintStart_toEndOf="@+id/new_deaths_lbl" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0.5dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="?attr/dividerColor"
                    app:layout_constraintBottom_toBottomOf="@+id/new_recovered_txt"
                    app:layout_constraintEnd_toStartOf="@+id/new_recovered_txt"
                    app:layout_constraintStart_toEndOf="@+id/new_recovered_lbl" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0.5dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="?attr/dividerColor"
                    app:layout_constraintBottom_toBottomOf="@+id/total_txt"
                    app:layout_constraintEnd_toStartOf="@+id/total_txt"
                    app:layout_constraintStart_toEndOf="@+id/total_lbl" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0.5dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="?attr/dividerColor"
                    app:layout_constraintBottom_toBottomOf="@+id/total_deaths_txt"
                    app:layout_constraintEnd_toStartOf="@+id/total_deaths_txt"
                    app:layout_constraintStart_toEndOf="@+id/total_deaths_lbl" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0.5dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="?attr/dividerColor"
                    app:layout_constraintBottom_toBottomOf="@+id/total_recovered_txt"
                    app:layout_constraintEnd_toStartOf="@+id/total_recovered_txt"
                    app:layout_constraintStart_toEndOf="@+id/total_recovered_lbl" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>



        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="?attr/dividerColor" />

    </LinearLayout>
</FrameLayout>